header_files = [
  'argparse.hpp',
]

source_files = [
]

extra_files = [
]

include_dirs = [
]

build_args = [
]

# argparse = static_library(
#   'argparse',
#   header_files,
#   source_files,
#   include_directories: include_dirs,
#   cpp_args: default_cpp_args + build_args,
#   extra_files: extra_files,
# )

argparse_dep = declare_dependency(
  include_directories: ['.'],
)

