header_files = [
  'code/AssetLib/3DS/3DSExporter.h',
  'code/AssetLib/3DS/3DSHelper.h',
  'code/AssetLib/3DS/3DSLoader.h',
  'code/AssetLib/3MF/3MFTypes.h',
  'code/AssetLib/3MF/3MFXmlTags.h',
  'code/AssetLib/3MF/D3MFExporter.h',
  'code/AssetLib/3MF/D3MFImporter.h',
  'code/AssetLib/3MF/D3MFOpcPackage.h',
  'code/AssetLib/3MF/XmlSerializer.h',
  'code/AssetLib/AC/ACLoader.h',
  'code/AssetLib/ASE/ASELoader.h',
  'code/AssetLib/ASE/ASEParser.h',
  'code/AssetLib/Assbin/AssbinExporter.h',
  'code/AssetLib/Assbin/AssbinFileWriter.h',
  'code/AssetLib/Assbin/AssbinLoader.h',
  'code/AssetLib/Assjson/cencode.h',
  'code/AssetLib/Assjson/mesh_splitter.h',
  'code/AssetLib/Assxml/AssxmlExporter.h',
  'code/AssetLib/Assxml/AssxmlFileWriter.h',
  'code/AssetLib/B3D/B3DImporter.h',
  'code/AssetLib/BVH/BVHLoader.h',
  'code/AssetLib/Blender/BlenderBMesh.h',
  'code/AssetLib/Blender/BlenderCustomData.h',
  'code/AssetLib/Blender/BlenderDNA.h',
  'code/AssetLib/Blender/BlenderIntermediate.h',
  'code/AssetLib/Blender/BlenderLoader.h',
  'code/AssetLib/Blender/BlenderModifier.h',
  'code/AssetLib/Blender/BlenderScene.h',
  'code/AssetLib/Blender/BlenderSceneGen.h',
  'code/AssetLib/Blender/BlenderTessellator.h',
  'code/AssetLib/C4D/C4DImporter.h',
  'code/AssetLib/COB/COBLoader.h',
  'code/AssetLib/COB/COBScene.h',
  'code/AssetLib/CSM/CSMLoader.h',
  'code/AssetLib/Collada/ColladaExporter.h',
  'code/AssetLib/Collada/ColladaHelper.h',
  'code/AssetLib/Collada/ColladaLoader.h',
  'code/AssetLib/Collada/ColladaParser.h',
  'code/AssetLib/DXF/DXFHelper.h',
  'code/AssetLib/DXF/DXFLoader.h',
  'code/AssetLib/FBX/FBXCommon.h',
  'code/AssetLib/FBX/FBXCompileConfig.h',
  'code/AssetLib/FBX/FBXConverter.h',
  'code/AssetLib/FBX/FBXDocument.h',
  'code/AssetLib/FBX/FBXDocumentUtil.h',
  'code/AssetLib/FBX/FBXExportNode.h',
  'code/AssetLib/FBX/FBXExportProperty.h',
  'code/AssetLib/FBX/FBXExporter.h',
  'code/AssetLib/FBX/FBXImportSettings.h',
  'code/AssetLib/FBX/FBXImporter.h',
  'code/AssetLib/FBX/FBXMeshGeometry.h',
  'code/AssetLib/FBX/FBXParser.h',
  'code/AssetLib/FBX/FBXProperties.h',
  'code/AssetLib/FBX/FBXTokenizer.h',
  'code/AssetLib/FBX/FBXUtil.h',
  'code/AssetLib/HMP/HMPFileData.h',
  'code/AssetLib/HMP/HMPLoader.h',
  'code/AssetLib/HMP/HalfLifeFileData.h',
  'code/AssetLib/IFC/IFCLoader.h',
  'code/AssetLib/IFC/IFCReaderGen_2x3.h',
  'code/AssetLib/IFC/IFCReaderGen_4.h',
  'code/AssetLib/IFC/IFCUtil.h',
  'code/AssetLib/IQM/IQMImporter.h',
  'code/AssetLib/IQM/iqm.h',
  'code/AssetLib/Irr/IRRLoader.h',
  'code/AssetLib/Irr/IRRMeshLoader.h',
  'code/AssetLib/Irr/IRRShared.h',
  'code/AssetLib/LWO/LWOAnimation.h',
  'code/AssetLib/LWO/LWOFileData.h',
  'code/AssetLib/LWO/LWOLoader.h',
  'code/AssetLib/LWS/LWSLoader.h',
  'code/AssetLib/M3D/M3DExporter.h',
  'code/AssetLib/M3D/M3DImporter.h',
  'code/AssetLib/M3D/M3DMaterials.h',
  'code/AssetLib/M3D/M3DWrapper.h',
  'code/AssetLib/M3D/m3d.h',
  'code/AssetLib/MD2/MD2FileData.h',
  'code/AssetLib/MD2/MD2Loader.h',
  'code/AssetLib/MD2/MD2NormalTable.h',
  'code/AssetLib/MD3/MD3FileData.h',
  'code/AssetLib/MD3/MD3Loader.h',
  'code/AssetLib/MD4/MD4FileData.h',
  'code/AssetLib/MD5/MD5Loader.h',
  'code/AssetLib/MD5/MD5Parser.h',
  'code/AssetLib/MDC/MDCFileData.h',
  'code/AssetLib/MDC/MDCLoader.h',
  'code/AssetLib/MDC/MDCNormalTable.h',
  'code/AssetLib/MDL/HalfLife/HL1FileData.h',
  'code/AssetLib/MDL/HalfLife/HL1ImportDefinitions.h',
  'code/AssetLib/MDL/HalfLife/HL1ImportSettings.h',
  'code/AssetLib/MDL/HalfLife/HL1MDLLoader.h',
  'code/AssetLib/MDL/HalfLife/HL1MeshTrivert.h',
  'code/AssetLib/MDL/HalfLife/HalfLifeMDLBaseHeader.h',
  'code/AssetLib/MDL/HalfLife/LogFunctions.h',
  'code/AssetLib/MDL/HalfLife/UniqueNameGenerator.h',
  'code/AssetLib/MDL/MDLDefaultColorMap.h',
  'code/AssetLib/MDL/MDLFileData.h',
  'code/AssetLib/MDL/MDLLoader.h',
  'code/AssetLib/MMD/MMDCpp14.h',
  'code/AssetLib/MMD/MMDImporter.h',
  'code/AssetLib/MMD/MMDPmdParser.h',
  'code/AssetLib/MMD/MMDPmxParser.h',
  'code/AssetLib/MMD/MMDVmdParser.h',
  'code/AssetLib/MS3D/MS3DLoader.h',
  'code/AssetLib/NDO/NDOLoader.h',
  'code/AssetLib/NFF/NFFLoader.h',
  'code/AssetLib/OFF/OFFLoader.h',
  'code/AssetLib/Obj/ObjExporter.h',
  'code/AssetLib/Obj/ObjFileData.h',
  'code/AssetLib/Obj/ObjFileImporter.h',
  'code/AssetLib/Obj/ObjFileMtlImporter.h',
  'code/AssetLib/Obj/ObjFileParser.h',
  'code/AssetLib/Obj/ObjTools.h',
  'code/AssetLib/Ogre/OgreBinarySerializer.h',
  'code/AssetLib/Ogre/OgreImporter.h',
  'code/AssetLib/Ogre/OgreParsingUtils.h',
  'code/AssetLib/Ogre/OgreStructs.h',
  'code/AssetLib/Ogre/OgreXmlSerializer.h',
  'code/AssetLib/OpenGEX/OpenGEXExporter.h',
  'code/AssetLib/OpenGEX/OpenGEXImporter.h',
  'code/AssetLib/OpenGEX/OpenGEXStructs.h',
  'code/AssetLib/Ply/PlyExporter.h',
  'code/AssetLib/Ply/PlyLoader.h',
  'code/AssetLib/Ply/PlyParser.h',
  'code/AssetLib/Q3BSP/Q3BSPFileData.h',
  'code/AssetLib/Q3BSP/Q3BSPFileImporter.h',
  'code/AssetLib/Q3BSP/Q3BSPFileParser.h',
  'code/AssetLib/Q3D/Q3DLoader.h',
  'code/AssetLib/Raw/RawLoader.h',
  'code/AssetLib/SIB/SIBImporter.h',
  'code/AssetLib/SMD/SMDLoader.h',
  'code/AssetLib/STEPParser/STEPFileEncoding.h',
  'code/AssetLib/STEPParser/STEPFileReader.h',
  'code/AssetLib/STL/STLExporter.h',
  'code/AssetLib/STL/STLLoader.h',
  'code/AssetLib/Step/STEPFile.h',
  'code/AssetLib/Step/StepExporter.h',
  'code/AssetLib/Terragen/TerragenLoader.h',
  'code/AssetLib/USD/USDLoader.h',
  'code/AssetLib/USD/USDLoaderImplTinyusdz.h',
  'code/AssetLib/USD/USDLoaderImplTinyusdzHelper.h',
  'code/AssetLib/USD/USDLoaderUtil.h',
  'code/AssetLib/USD/USDPreprocessor.h',
  'code/AssetLib/Unreal/UnrealLoader.h',
  'code/AssetLib/X/XFileExporter.h',
  'code/AssetLib/X/XFileHelper.h',
  'code/AssetLib/X/XFileImporter.h',
  'code/AssetLib/X/XFileParser.h',
  'code/AssetLib/X3D/X3DGeoHelper.h',
  'code/AssetLib/X3D/X3DXmlHelper.h',
  'code/AssetLib/XGL/XGLLoader.h',
  'code/AssetLib/glTF/glTFAsset.h',
  'code/AssetLib/glTF/glTFAssetWriter.h',
  'code/AssetLib/glTF/glTFCommon.h',
  'code/AssetLib/glTF/glTFExporter.h',
  'code/AssetLib/glTF/glTFImporter.h',
  'code/AssetLib/glTF2/glTF2Asset.h',
  'code/AssetLib/glTF2/glTF2AssetWriter.h',
  'code/AssetLib/glTF2/glTF2Exporter.h',
  'code/AssetLib/glTF2/glTF2Importer.h',
  'code/CApi/CInterfaceIOWrapper.h',
  'code/Common/BaseProcess.h',
  'code/Common/Compression.h',
  'code/Common/DefaultProgressHandler.h',
  'code/Common/FileLogStream.h',
  'code/Common/FileSystemFilter.h',
  'code/Common/IFF.h',
  'code/Common/Importer.h',
  'code/Common/Maybe.h',
  'code/Common/PolyTools.h',
  'code/Common/ScenePreprocessor.h',
  'code/Common/ScenePrivate.h',
  'code/Common/StackAllocator.h',
  'code/Common/StbCommon.h',
  'code/Common/StdOStreamLogStream.h',
  'code/Common/TargetAnimation.h',
  'code/Common/VertexTriangleAdjacency.h',
  'code/Common/Win32DebugLogStream.h',
  'code/Common/assbin_chunks.h',
  'code/Common/simd.h',
  'code/Geometry/GeometryUtils.h',
  'code/Material/MaterialSystem.h',
  'code/Pbrt/PbrtExporter.h',
  'code/PostProcessing/ArmaturePopulate.h',
  'code/PostProcessing/CalcTangentsProcess.h',
  'code/PostProcessing/ComputeUVMappingProcess.h',
  'code/PostProcessing/ConvertToLHProcess.h',
  'code/PostProcessing/DeboneProcess.h',
  'code/PostProcessing/DropFaceNormalsProcess.h',
  'code/PostProcessing/EmbedTexturesProcess.h',
  'code/PostProcessing/FindDegenerates.h',
  'code/PostProcessing/FindInstancesProcess.h',
  'code/PostProcessing/FindInvalidDataProcess.h',
  'code/PostProcessing/FixNormalsStep.h',
  'code/PostProcessing/GenBoundingBoxesProcess.h',
  'code/PostProcessing/GenFaceNormalsProcess.h',
  'code/PostProcessing/GenVertexNormalsProcess.h',
  'code/PostProcessing/ImproveCacheLocality.h',
  'code/PostProcessing/JoinVerticesProcess.h',
  'code/PostProcessing/LimitBoneWeightsProcess.h',
  'code/PostProcessing/MakeVerboseFormat.h',
  'code/PostProcessing/OptimizeGraph.h',
  'code/PostProcessing/OptimizeMeshes.h',
  'code/PostProcessing/PretransformVertices.h',
  'code/PostProcessing/ProcessHelper.h',
  'code/PostProcessing/RemoveRedundantMaterials.h',
  'code/PostProcessing/RemoveVCProcess.h',
  'code/PostProcessing/ScaleProcess.h',
  'code/PostProcessing/SortByPTypeProcess.h',
  'code/PostProcessing/SplitByBoneCountProcess.h',
  'code/PostProcessing/SplitLargeMeshes.h',
  'code/PostProcessing/TextureTransform.h',
  'code/PostProcessing/TriangulateProcess.h',
  'code/PostProcessing/ValidateDataStructure.h',
  'contrib/openddlparser/include/openddlparser/DDLNode.h',
  'contrib/openddlparser/include/openddlparser/OpenDDLCommon.h',
  'contrib/openddlparser/include/openddlparser/OpenDDLExport.h',
  'contrib/openddlparser/include/openddlparser/OpenDDLParser.h',
  'contrib/openddlparser/include/openddlparser/OpenDDLParserUtils.h',
  'contrib/openddlparser/include/openddlparser/OpenDDLStream.h',
  'contrib/openddlparser/include/openddlparser/TPoolAllocator.h',
  'contrib/openddlparser/include/openddlparser/Value.h',
  'contrib/poly2tri/poly2tri/common/dll_symbol.h',
  'contrib/poly2tri/poly2tri/common/shapes.h',
  'contrib/poly2tri/poly2tri/common/utils.h',
  'contrib/poly2tri/poly2tri/poly2tri.h',
  'contrib/poly2tri/poly2tri/sweep/advancing_front.h',
  'contrib/poly2tri/poly2tri/sweep/cdt.h',
  'contrib/poly2tri/poly2tri/sweep/sweep.h',
  'contrib/poly2tri/poly2tri/sweep/sweep_context.h',
  'contrib/utf8cpp/source/utf8/checked.h',
  'contrib/utf8cpp/source/utf8/core.h',
  'contrib/utf8cpp/source/utf8/cpp11.h',
  'contrib/utf8cpp/source/utf8/cpp17.h',
  'contrib/utf8cpp/source/utf8/unchecked.h',
  'contrib/utf8cpp/source/utf8.h',
  'include/assimp/AssertHandler.h',
  'include/assimp/BaseImporter.h',
  'include/assimp/Bitmap.h',
  'include/assimp/BlobIOSystem.h',
  'include/assimp/ByteSwapper.h',
  'include/assimp/ColladaMetaData.h',
  'include/assimp/Compiler/poppack1.h',
  'include/assimp/Compiler/pstdint.h',
  'include/assimp/Compiler/pushpack1.h',
  'include/assimp/CreateAnimMesh.h',
  'include/assimp/DefaultIOStream.h',
  'include/assimp/DefaultIOSystem.h',
  'include/assimp/Exceptional.h',
  'include/assimp/GenericProperty.h',
  'include/assimp/GltfMaterial.h',
  'include/assimp/Hash.h',
  'include/assimp/IOStreamBuffer.h',
  'include/assimp/LineSplitter.h',
  'include/assimp/LogAux.h',
  'include/assimp/MathFunctions.h',
  'include/assimp/MemoryIOWrapper.h',
  'include/assimp/ObjMaterial.h',
  'include/assimp/ParsingUtils.h',
  'include/assimp/Profiler.h',
  'include/assimp/RemoveComments.h',
  'include/assimp/SGSpatialSort.h',
  'include/assimp/SceneCombiner.h',
  'include/assimp/SkeletonMeshBuilder.h',
  'include/assimp/SmallVector.h',
  'include/assimp/SmoothingGroups.h',
  'include/assimp/SpatialSort.h',
  'include/assimp/StandardShapes.h',
  'include/assimp/StreamReader.h',
  'include/assimp/StreamWriter.h',
  'include/assimp/StringComparison.h',
  'include/assimp/StringUtils.h',
  'include/assimp/Subdivision.h',
  'include/assimp/TinyFormatter.h',
  'include/assimp/Vertex.h',
  'include/assimp/XMLTools.h',
  'include/assimp/XmlParser.h',
  'include/assimp/ZipArchiveIOSystem.h',
  'include/assimp/aabb.h',
  'include/assimp/ai_assert.h',
  'include/assimp/anim.h',
  'include/assimp/camera.h',
  'include/assimp/cexport.h',
  'include/assimp/cfileio.h',
  'include/assimp/cimport.h',
  'include/assimp/color4.h',
  'include/assimp/commonMetaData.h',
  'include/assimp/config.h',
  'include/assimp/defs.h',
  'include/assimp/fast_atof.h',
  'include/assimp/importerdesc.h',
  'include/assimp/light.h',
  'include/assimp/material.h',
  'include/assimp/matrix3x3.h',
  'include/assimp/matrix4x4.h',
  'include/assimp/mesh.h',
  'include/assimp/metadata.h',
  'include/assimp/pbrmaterial.h',
  'include/assimp/port/AndroidJNI/AndroidJNIIOSystem.h',
  'include/assimp/port/AndroidJNI/BundledAssetIOSystem.h',
  'include/assimp/postprocess.h',
  'include/assimp/qnan.h',
  'include/assimp/quaternion.h',
  'include/assimp/revision.h',
  'include/assimp/scene.h',
  'include/assimp/texture.h',
  'include/assimp/types.h',
  'include/assimp/vector2.h',
  'include/assimp/vector3.h',
  'include/assimp/version.h',
  'code/AssetLib/AMF/AMFImporter.hpp',
  'code/AssetLib/AMF/AMFImporter_Node.hpp',
  'code/AssetLib/X3D/X3DExporter.hpp',
  'code/AssetLib/X3D/X3DImporter.hpp',
  'code/AssetLib/X3D/X3DImporter_Macro.hpp',
  'code/AssetLib/X3D/X3DImporter_Node.hpp',
  'contrib/pugixml/src/pugiconfig.hpp',
  'contrib/pugixml/src/pugixml.hpp',
  'include/assimp/Base64.hpp',
  'include/assimp/DefaultLogger.hpp',
  'include/assimp/Exporter.hpp',
  'include/assimp/IOStream.hpp',
  'include/assimp/IOSystem.hpp',
  'include/assimp/Importer.hpp',
  'include/assimp/LogStream.hpp',
  'include/assimp/Logger.hpp',
  'include/assimp/NullLogger.hpp',
  'include/assimp/ProgressHandler.hpp',
]

source_files = [
  'code/AssetLib/Assjson/cencode.c',
  'contrib/poly2tri/poly2tri/common/shapes.cc',
  'contrib/poly2tri/poly2tri/sweep/advancing_front.cc',
  'contrib/poly2tri/poly2tri/sweep/cdt.cc',
  'contrib/poly2tri/poly2tri/sweep/sweep.cc',
  'contrib/poly2tri/poly2tri/sweep/sweep_context.cc',
  'code/AssetLib/3DS/3DSConverter.cpp',
  'code/AssetLib/3DS/3DSExporter.cpp',
  'code/AssetLib/3DS/3DSLoader.cpp',
  'code/AssetLib/3MF/D3MFExporter.cpp',
  'code/AssetLib/3MF/D3MFImporter.cpp',
  'code/AssetLib/3MF/D3MFOpcPackage.cpp',
  'code/AssetLib/3MF/XmlSerializer.cpp',
  'code/AssetLib/AC/ACLoader.cpp',
  'code/AssetLib/AMF/AMFImporter.cpp',
  'code/AssetLib/AMF/AMFImporter_Geometry.cpp',
  'code/AssetLib/AMF/AMFImporter_Material.cpp',
  'code/AssetLib/AMF/AMFImporter_Postprocess.cpp',
  'code/AssetLib/ASE/ASELoader.cpp',
  'code/AssetLib/ASE/ASEParser.cpp',
  'code/AssetLib/Assbin/AssbinExporter.cpp',
  'code/AssetLib/Assbin/AssbinFileWriter.cpp',
  'code/AssetLib/Assbin/AssbinLoader.cpp',
  'code/AssetLib/Assjson/json_exporter.cpp',
  'code/AssetLib/Assjson/mesh_splitter.cpp',
  'code/AssetLib/Assxml/AssxmlExporter.cpp',
  'code/AssetLib/Assxml/AssxmlFileWriter.cpp',
  'code/AssetLib/B3D/B3DImporter.cpp',
  'code/AssetLib/BVH/BVHLoader.cpp',
  'code/AssetLib/Blender/BlenderBMesh.cpp',
  'code/AssetLib/Blender/BlenderCustomData.cpp',
  'code/AssetLib/Blender/BlenderDNA.cpp',
  'code/AssetLib/Blender/BlenderLoader.cpp',
  'code/AssetLib/Blender/BlenderModifier.cpp',
  'code/AssetLib/Blender/BlenderScene.cpp',
  'code/AssetLib/Blender/BlenderTessellator.cpp',
  'code/AssetLib/C4D/C4DImporter.cpp',
  'code/AssetLib/COB/COBLoader.cpp',
  'code/AssetLib/CSM/CSMLoader.cpp',
  'code/AssetLib/Collada/ColladaExporter.cpp',
  'code/AssetLib/Collada/ColladaHelper.cpp',
  'code/AssetLib/Collada/ColladaLoader.cpp',
  'code/AssetLib/Collada/ColladaParser.cpp',
  'code/AssetLib/DXF/DXFLoader.cpp',
  'code/AssetLib/FBX/FBXAnimation.cpp',
  'code/AssetLib/FBX/FBXBinaryTokenizer.cpp',
  'code/AssetLib/FBX/FBXConverter.cpp',
  'code/AssetLib/FBX/FBXDeformer.cpp',
  'code/AssetLib/FBX/FBXDocument.cpp',
  'code/AssetLib/FBX/FBXDocumentUtil.cpp',
  'code/AssetLib/FBX/FBXExportNode.cpp',
  'code/AssetLib/FBX/FBXExportProperty.cpp',
  'code/AssetLib/FBX/FBXExporter.cpp',
  'code/AssetLib/FBX/FBXImporter.cpp',
  'code/AssetLib/FBX/FBXMaterial.cpp',
  'code/AssetLib/FBX/FBXMeshGeometry.cpp',
  'code/AssetLib/FBX/FBXModel.cpp',
  'code/AssetLib/FBX/FBXNodeAttribute.cpp',
  'code/AssetLib/FBX/FBXParser.cpp',
  'code/AssetLib/FBX/FBXProperties.cpp',
  'code/AssetLib/FBX/FBXTokenizer.cpp',
  'code/AssetLib/FBX/FBXUtil.cpp',
  'code/AssetLib/HMP/HMPLoader.cpp',
  'code/AssetLib/IFC/IFCBoolean.cpp',
  'code/AssetLib/IFC/IFCCurve.cpp',
  'code/AssetLib/IFC/IFCGeometry.cpp',
  'code/AssetLib/IFC/IFCLoader.cpp',
  'code/AssetLib/IFC/IFCMaterial.cpp',
  'code/AssetLib/IFC/IFCOpenings.cpp',
  'code/AssetLib/IFC/IFCProfile.cpp',
  'code/AssetLib/IFC/IFCReaderGen1_2x3.cpp',
  'code/AssetLib/IFC/IFCReaderGen2_2x3.cpp',
  'code/AssetLib/IFC/IFCReaderGen_4.cpp',
  'code/AssetLib/IFC/IFCUtil.cpp',
  'code/AssetLib/IQM/IQMImporter.cpp',
  'code/AssetLib/Irr/IRRLoader.cpp',
  'code/AssetLib/Irr/IRRMeshLoader.cpp',
  'code/AssetLib/Irr/IRRShared.cpp',
  'code/AssetLib/LWO/LWOAnimation.cpp',
  'code/AssetLib/LWO/LWOBLoader.cpp',
  'code/AssetLib/LWO/LWOLoader.cpp',
  'code/AssetLib/LWO/LWOMaterial.cpp',
  'code/AssetLib/LWS/LWSLoader.cpp',
  'code/AssetLib/M3D/M3DExporter.cpp',
  'code/AssetLib/M3D/M3DImporter.cpp',
  'code/AssetLib/M3D/M3DWrapper.cpp',
  'code/AssetLib/MD2/MD2Loader.cpp',
  'code/AssetLib/MD3/MD3Loader.cpp',
  'code/AssetLib/MD5/MD5Loader.cpp',
  'code/AssetLib/MD5/MD5Parser.cpp',
  'code/AssetLib/MDC/MDCLoader.cpp',
  'code/AssetLib/MDL/HalfLife/HL1MDLLoader.cpp',
  'code/AssetLib/MDL/HalfLife/UniqueNameGenerator.cpp',
  'code/AssetLib/MDL/MDLLoader.cpp',
  'code/AssetLib/MDL/MDLMaterialLoader.cpp',
  'code/AssetLib/MMD/MMDImporter.cpp',
  'code/AssetLib/MMD/MMDPmxParser.cpp',
  'code/AssetLib/MS3D/MS3DLoader.cpp',
  'code/AssetLib/NDO/NDOLoader.cpp',
  'code/AssetLib/NFF/NFFLoader.cpp',
  'code/AssetLib/OFF/OFFLoader.cpp',
  'code/AssetLib/Obj/ObjExporter.cpp',
  'code/AssetLib/Obj/ObjFileImporter.cpp',
  'code/AssetLib/Obj/ObjFileMtlImporter.cpp',
  'code/AssetLib/Obj/ObjFileParser.cpp',
  'code/AssetLib/Ogre/OgreBinarySerializer.cpp',
  'code/AssetLib/Ogre/OgreImporter.cpp',
  'code/AssetLib/Ogre/OgreMaterial.cpp',
  'code/AssetLib/Ogre/OgreStructs.cpp',
  'code/AssetLib/Ogre/OgreXmlSerializer.cpp',
  'code/AssetLib/OpenGEX/OpenGEXExporter.cpp',
  'code/AssetLib/OpenGEX/OpenGEXImporter.cpp',
  'code/AssetLib/Ply/PlyExporter.cpp',
  'code/AssetLib/Ply/PlyLoader.cpp',
  'code/AssetLib/Ply/PlyParser.cpp',
  'code/AssetLib/Q3BSP/Q3BSPFileImporter.cpp',
  'code/AssetLib/Q3BSP/Q3BSPFileParser.cpp',
  'code/AssetLib/Q3D/Q3DLoader.cpp',
  'code/AssetLib/Raw/RawLoader.cpp',
  'code/AssetLib/SIB/SIBImporter.cpp',
  'code/AssetLib/SMD/SMDLoader.cpp',
  'code/AssetLib/STEPParser/STEPFileEncoding.cpp',
  'code/AssetLib/STEPParser/STEPFileReader.cpp',
  'code/AssetLib/STL/STLExporter.cpp',
  'code/AssetLib/STL/STLLoader.cpp',
  'code/AssetLib/Step/StepExporter.cpp',
  'code/AssetLib/Terragen/TerragenLoader.cpp',
  'code/AssetLib/USD/USDLoader.cpp',
  'code/AssetLib/USD/USDLoaderImplTinyusdz.cpp',
  'code/AssetLib/USD/USDLoaderImplTinyusdzHelper.cpp',
  'code/AssetLib/USD/USDLoaderUtil.cpp',
  'code/AssetLib/Unreal/UnrealLoader.cpp',
  'code/AssetLib/X/XFileExporter.cpp',
  'code/AssetLib/X/XFileImporter.cpp',
  'code/AssetLib/X/XFileParser.cpp',
  'code/AssetLib/X3D/X3DExporter.cpp',
  'code/AssetLib/X3D/X3DGeoHelper.cpp',
  'code/AssetLib/X3D/X3DImporter.cpp',
  'code/AssetLib/X3D/X3DImporter_Geometry2D.cpp',
  'code/AssetLib/X3D/X3DImporter_Geometry3D.cpp',
  'code/AssetLib/X3D/X3DImporter_Group.cpp',
  'code/AssetLib/X3D/X3DImporter_Light.cpp',
  'code/AssetLib/X3D/X3DImporter_Metadata.cpp',
  'code/AssetLib/X3D/X3DImporter_Networking.cpp',
  'code/AssetLib/X3D/X3DImporter_Postprocess.cpp',
  'code/AssetLib/X3D/X3DImporter_Rendering.cpp',
  'code/AssetLib/X3D/X3DImporter_Shape.cpp',
  'code/AssetLib/X3D/X3DImporter_Texturing.cpp',
  'code/AssetLib/X3D/X3DXmlHelper.cpp',
  'code/AssetLib/XGL/XGLLoader.cpp',
  'code/AssetLib/glTF/glTFCommon.cpp',
  'code/AssetLib/glTF/glTFExporter.cpp',
  'code/AssetLib/glTF/glTFImporter.cpp',
  'code/AssetLib/glTF2/glTF2Exporter.cpp',
  'code/AssetLib/glTF2/glTF2Importer.cpp',
  'code/CApi/AssimpCExport.cpp',
  'code/CApi/CInterfaceIOWrapper.cpp',
  'code/Common/AssertHandler.cpp',
  'code/Common/Assimp.cpp',
  'code/Common/Base64.cpp',
  'code/Common/BaseImporter.cpp',
  'code/Common/BaseProcess.cpp',
  'code/Common/Bitmap.cpp',
  'code/Common/Compression.cpp',
  'code/Common/CreateAnimMesh.cpp',
  'code/Common/DefaultIOStream.cpp',
  'code/Common/DefaultIOSystem.cpp',
  'code/Common/DefaultLogger.cpp',
  'code/Common/Exceptional.cpp',
  'code/Common/Exporter.cpp',
  'code/Common/IOSystem.cpp',
  'code/Common/Importer.cpp',
  'code/Common/ImporterRegistry.cpp',
  'code/Common/PostStepRegistry.cpp',
  'code/Common/RemoveComments.cpp',
  'code/Common/SGSpatialSort.cpp',
  'code/Common/SceneCombiner.cpp',
  'code/Common/ScenePreprocessor.cpp',
  'code/Common/SkeletonMeshBuilder.cpp',
  'code/Common/SpatialSort.cpp',
  'code/Common/StandardShapes.cpp',
  'code/Common/Subdivision.cpp',
  'code/Common/TargetAnimation.cpp',
  'code/Common/Version.cpp',
  'code/Common/VertexTriangleAdjacency.cpp',
  'code/Common/ZipArchiveIOSystem.cpp',
  'code/Common/material.cpp',
  'code/Common/scene.cpp',
  'code/Common/simd.cpp',
  'code/Geometry/GeometryUtils.cpp',
  'code/Material/MaterialSystem.cpp',
  'code/Pbrt/PbrtExporter.cpp',
  'code/PostProcessing/ArmaturePopulate.cpp',
  'code/PostProcessing/CalcTangentsProcess.cpp',
  'code/PostProcessing/ComputeUVMappingProcess.cpp',
  'code/PostProcessing/ConvertToLHProcess.cpp',
  'code/PostProcessing/DeboneProcess.cpp',
  'code/PostProcessing/DropFaceNormalsProcess.cpp',
  'code/PostProcessing/EmbedTexturesProcess.cpp',
  'code/PostProcessing/FindDegenerates.cpp',
  'code/PostProcessing/FindInstancesProcess.cpp',
  'code/PostProcessing/FindInvalidDataProcess.cpp',
  'code/PostProcessing/FixNormalsStep.cpp',
  'code/PostProcessing/GenBoundingBoxesProcess.cpp',
  'code/PostProcessing/GenFaceNormalsProcess.cpp',
  'code/PostProcessing/GenVertexNormalsProcess.cpp',
  'code/PostProcessing/ImproveCacheLocality.cpp',
  'code/PostProcessing/JoinVerticesProcess.cpp',
  'code/PostProcessing/LimitBoneWeightsProcess.cpp',
  'code/PostProcessing/MakeVerboseFormat.cpp',
  'code/PostProcessing/OptimizeGraph.cpp',
  'code/PostProcessing/OptimizeMeshes.cpp',
  'code/PostProcessing/PretransformVertices.cpp',
  'code/PostProcessing/ProcessHelper.cpp',
  'code/PostProcessing/RemoveRedundantMaterials.cpp',
  'code/PostProcessing/RemoveVCProcess.cpp',
  'code/PostProcessing/ScaleProcess.cpp',
  'code/PostProcessing/SortByPTypeProcess.cpp',
  'code/PostProcessing/SplitByBoneCountProcess.cpp',
  'code/PostProcessing/SplitLargeMeshes.cpp',
  'code/PostProcessing/TextureTransform.cpp',
  'code/PostProcessing/TriangulateProcess.cpp',
  'code/PostProcessing/ValidateDataStructure.cpp',
  'contrib/openddlparser/code/DDLNode.cpp',
  'contrib/openddlparser/code/OpenDDLCommon.cpp',
  'contrib/openddlparser/code/OpenDDLExport.cpp',
  'contrib/openddlparser/code/OpenDDLParser.cpp',
  'contrib/openddlparser/code/OpenDDLStream.cpp',
  'contrib/openddlparser/code/Value.cpp',
  'contrib/pugixml/src/pugixml.cpp',
]

extra_files = [
  'code/AssetLib/Blender/BlenderDNA.inl',
  'code/AssetLib/glTF/glTFAsset.inl',
  'code/AssetLib/glTF/glTFAssetWriter.inl',
  'code/AssetLib/glTF2/glTF2Asset.inl',
  'code/AssetLib/glTF2/glTF2AssetWriter.inl',
  'code/Common/StackAllocator.inl',
  'include/assimp/SmoothingGroups.inl',
  'include/assimp/color4.inl',
  'include/assimp/material.inl',
  'include/assimp/matrix3x3.inl',
  'include/assimp/matrix4x4.inl',
  'include/assimp/quaternion.inl',
  'include/assimp/vector2.inl',
  'include/assimp/vector3.inl',
]

include_dirs = [
  'include',
  'code',
  'contrib/openddlparser/include',
  'contrib/utf8cpp/source',
  'contrib/pugixml/src',
  '../rapidjson',
  '../minizip-ng',
  '../zlib-ng',
]

build_args = [
  '-DASSIMP_BUILD_NO_OWN_ZLIB',
  '-DASSIMP_BUILD_NO_C4D_IMPORTER',
  '-DASSIMP_BUILD_NO_IFC_IMPORTER',
  '-DASSIMP_BUILD_NO_OGRE_IMPORTER',
  '-DASSIMP_BUILD_NO_IRR_IMPORTER',
  '-DASSIMP_BUILD_NO_IRRMESH_IMPORTER',
  '-DASSIMP_BUILD_NO_X_IMPORTER',
  '-DASSIMP_BUILD_NO_X_EXPORTER',
  '-DASSIMP_BUILD_NO_X3D_IMPORTER',
  '-DASSIMP_BUILD_NO_X3D_EXPORTER',
  '-DASSIMP_BUILD_NO_XGL_IMPORTER',
  '-DASSIMP_BUILD_NO_M3D_IMPORTER',
  '-DASSIMP_BUILD_NO_M3D_EXPORTER',
  '-DASSIMP_BUILD_NO_PBRT_EXPORTER',
  '-DASSIMP_BUILD_NO_3DS_IMPORTER',
  '-DASSIMP_BUILD_NO_3DS_EXPORTER',
  '-DASSIMP_BUILD_NO_3MF_IMPORTER',
  '-DASSIMP_BUILD_NO_3MF_EXPORTER',
  '-DASSIMP_BUILD_NO_AC_IMPORTER',
  '-DASSIMP_BUILD_NO_AMF_IMPORTER',
  '-DASSIMP_BUILD_NO_ASE_IMPORTER',
  '-DASSIMP_BUILD_NO_ASSBIN_IMPORTER',
  '-DASSIMP_BUILD_NO_ASSBIN_EXPORTER',
  '-DASSIMP_BUILD_NO_ASSJSON_EXPORTER',
  '-DASSIMP_BUILD_NO_ASSXML_EXPORTER',
  '-DASSIMP_BUILD_NO_BVH_IMPORTER',
  '-DASSIMP_BUILD_NO_COB_IMPORTER',
  '-DASSIMP_BUILD_NO_CSM_IMPORTER',
  '-DASSIMP_BUILD_NO_DXF_IMPORTER',
  '-DASSIMP_BUILD_NO_HMP_IMPORTER',
  '-DASSIMP_BUILD_NO_LWO_IMPORTER',
  '-DASSIMP_BUILD_NO_LWS_IMPORTER',
  '-DASSIMP_BUILD_NO_MD2_IMPORTER',
  '-DASSIMP_BUILD_NO_MD3_IMPORTER',
  '-DASSIMP_BUILD_NO_MD5_IMPORTER',
  '-DASSIMP_BUILD_NO_MDC_IMPORTER',
  '-DASSIMP_BUILD_NO_MDL_IMPORTER',
  '-DASSIMP_BUILD_NO_MMD_IMPORTER',
  '-DASSIMP_BUILD_NO_MS3D_IMPORTER',
  '-DASSIMP_BUILD_NO_NDO_IMPORTER',
  '-DASSIMP_BUILD_NO_NFF_IMPORTER',
  '-DASSIMP_BUILD_NO_OFF_IMPORTER',
  '-DASSIMP_BUILD_NO_PLY_IMPORTER',
  '-DASSIMP_BUILD_NO_PLY_EXPORTER',
  '-DASSIMP_BUILD_NO_Q3BSP_IMPORTER',
  '-DASSIMP_BUILD_NO_Q3D_IMPORTER',
  '-DASSIMP_BUILD_NO_RAW_IMPORTER',
  '-DASSIMP_BUILD_NO_SIB_IMPORTER',
  '-DASSIMP_BUILD_NO_SMD_IMPORTER',
  '-DASSIMP_BUILD_NO_STEP_EXPORTER',
  '-DASSIMP_BUILD_NO_STL_IMPORTER',
  '-DASSIMP_BUILD_NO_STL_EXPORTER',
  '-DASSIMP_BUILD_NO_3D_IMPORTER',
  '-DASSIMP_BUILD_NO_XGL_IMPORTER',
  '-DASSIMP_BUILD_NO_USD_IMPORTER',
  '-DOPENDDL_STATIC_LIBARY'
]

if is_msvc
  build_args += ['-D_CRT_SECURE_NO_WARNINGS', '-D_SCL_SECURE_NO_WARNINGS', '-D_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING']
endif

assimp = static_library(
  'assimp',
  header_files,
  source_files,
  include_directories: include_dirs,
  c_args: default_c_args + build_args,
  cpp_args: default_cpp_args + build_args,
  override_options: {
    'werror': false,
    'cpp_rtti': true,
  }
)

assimp_dep = declare_dependency(
  include_directories: ['include'],
  link_with: [assimp],
)

all_deps += assimp
